--- a/style.css
+++ b/style.css
@@ -4,30 +4,35 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.eisenhower-matrix-description {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.eisenhower-matrix-description img {
   width: 100%;
 }
-.aaa .more-inf {
+.eisenhower-matrix-description .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .eisenhower-matrix-description {
   text-align: center;
   }
 }
-.centered-main-page-element {
+.main-content-wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task-input {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
+}
+.task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -89,7 +94,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input#new-task-input {
   width: 318px;
 }
 p > button:hover {
@@ -122,15 +127,15 @@ li > label {
 li > input[type="text"] {
   width: 226px
 }
-li > button.delete:hover {
+li > button.delete-button:hover {
   color: #CF2323;
 }
-button.delete img {
+button.delete-button img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete-button img:hover {
   transform: rotateZ(0);
 }
 
