--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.eisenhower-matrix-desc img {
+.eisenhower-matrix-desc .img {
   width: 100%;
 }
 .eisenhower-matrix-desc .more-inf {
@@ -40,17 +40,17 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.ul {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.li, .title {
   list-style:none;
 }
-input,button{
+.input, .btn{
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -59,11 +59,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
+.title,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -94,15 +94,15 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task-input {
+#new-task-input {
   width: 318px;
 }
-p > button:hover {
+p > .btn:hover {
   color: #0fc57c;
 }
 
 /* Task list */
-li {
+.li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -111,50 +111,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.li > input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.li > input[type="text"] {
   width: 226px
 }
-li > button.del-btn:hover {
+.del-btn:hover {
   color: #CF2323;
 }
-button.del-btn img {
+.btn.del-btn img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.del-btn img:hover {
+.btn.del-btn img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.ul .li input[type=text] {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.ul .edit-mode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.ul .edit-mode label {
   display:none;
 }
