--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@
 .task-input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-lbl {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -127,7 +127,7 @@ p > .btn:hover {
   width: 226px;
 }
 .li > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .del-btn:hover {
   color: #CF2323;
@@ -143,18 +143,18 @@ p > .btn:hover {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .ul .li input[type=text] {
-  display: none
+  display: none;
 }
 
 .ul .edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .ul .edit-mode label {
