--- a/style.css
+++ b/style.css
@@ -46,10 +46,12 @@
   margin: 0;
   padding: 0px;
 }
-.li, .title {
+.li,
+.title {
   list-style: none;
 }
-.input, .btn{
+.input,
+.btn{
   outline: none;
 }
 .btn {
