--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ input[type="text"]:focus {
 /* New Task */
 label[for="new-task"] {
   display: block;
-  margin: 0 0 20px;
+  margin: 16px 0 20px 0;
 }
 #new-task-input {
   width: 318px;
