--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
 }
 /* Heading */
 .title,
-label[for="new-task"] {
+.add-task-section__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -77,7 +77,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -89,12 +89,12 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-task-section__label {
   display: block;
   margin: 16px 0 20px 0;
 }
@@ -119,46 +119,46 @@ label[for="new-task"] {
   vertical-align: middle;
 }
 
-.li > input[type="checkbox"] {
+.li > .checkbox-input {
   margin: 0 10px;
 }
-.li > label {
+.li > .task-lbl {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.li > input[type="text"] {
+.li > .task-input {
   width: 226px;
 }
 .del-btn:hover {
   color: #CF2323;
 }
-.btn.del-btn img {
+.del-btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.btn.del-btn img:hover {
+.del-btn__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks .task-lbl {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.ul .li input[type=text] {
+.ul .li .task-input {
   display: none;
 }
 
-.ul .edit-mode input[type=text] {
+.ul .edit-mode .task-input {
   display: inline-block;
   width: 224px;
 }
 
-.ul .edit-mode label {
+.ul .edit-mode .task-lbl {
   display: none;
 }
